[package]
name = "humility-cmd-log"
version = "0.1.0"
edition = "2021"
description = "read and display a log (st)ring buffer"

[dependencies]
humility = { path = "../../humility-core", package = "humility-core" }
humility-cmd = { path = "../../humility-cmd" }
clap = { version = "3.0.12", features = ["derive", "env"] }
anyhow = { version = "1.0.44", features = ["backtrace"] }
