[package]
name = "humility-cmd-pmp"
version = "0.1.0"
edition = "2021"
description = "print physical memory protection regions"

[dependencies]
humility = { path = "../../humility-core", package = "humility-core" }
humility-cmd = { path = "../../humility-cmd" }
clap = { version = "3.0.12", features = ["derive", "env"] }
anyhow = { version = "1.0.44", features = ["backtrace"] }
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
goblin = "0.2"
bit_field = "0.10.1"
