[package]
name = "humility-cmd-qemu"
version = "0.1.0"
edition = "2021"
description = "Launch a qemu instance running the corresponding archive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humility = { path = "../../humility-core", package = "humility-core" }
humility-cmd = { path = "../../humility-cmd" }
cmd-gdb = { path = "../gdb", package = "humility-cmd-gdb" }
anyhow = { version = "1.0.44", features = ["backtrace"] }
clap = { version = "3.0.12", features = ["derive", "env"] }
ctrlc = "3.1.5"
goblin = "0.2"
tempfile = "3.3"
